objects/Application_Answer_SFDC2__c.object
<CustomObject>
    <description>SFDC2: Used to capture Application Answer data from external systems</description>
    <fields>
        <fullName>Answer_Text__c</fullName>
        <description>Text of applicant answer</description>
        <label>Answer Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Id__c</fullName>
        <description>Related application</description>
        <label>Application Id</label>
        <referenceTo>Application_SFDC2__c</referenceTo>
        <relationshipLabel>Application Answers</relationshipLabel>
        <relationshipName>Application_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Used to assist in updating answers</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Question_Code__c</fullName>
        <description>Code used to reference custom question by Meridian Link</description>
        <label>Question Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <formula>Question__r.Question_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Question text</description>
        <label>Question</label>
        <referenceTo>Application_Question_SFDC2__c</referenceTo>
        <relationshipLabel>Application Answers</relationshipLabel>
        <relationshipName>Application_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Application Answer</label>
    <nameField>
        <displayFormat>Answer-{0000000}</displayFormat>
        <label>Answer Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>